# lem_in

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  lem-in  lem-out  mp
inc/: edge.h  flow.h  lem_in.h  node.h  room.h
maps/cmd/: cmd_start_end_start
maps/others/: 42.map  big1  big3  bigs1  bigs2  bigs3  bigs4  my2  my3  my4
src/: add_ant_to_room.c  add_edge_to_node.c  add_node.c  add_node_to_farm.c  augment_flow.c  build_direct_flow.c  build_farm.c  build_flows.c  build_residual_network.c  calculation_of_flow_parameters.c  cmp_node.c  convert_path_to_printable.c  create_edge.c  create_flow.c  create_hash_node.c  create_node.c  create_path.c  create_room.c  del_edge.c  del_unmarked_nodes.c  destroy_buffer.c  destroy_farm.c  destroy_flow.c  destroy_flows.c  destroy_node.c  destroy_path.c  destroy_room.c  dijkstra.c  display_path.c  display_solution.c  fill_farm.c  get_colors.c  get_count_files.c  get_fd_buffer.c  get_hash_name.c  get_hash_node.c  get_length_node_name.c  indent_control.c  insert_number_inline.c  main.c  (+22 more)
visu/: 42.map  Makefile
visu/includes/: bresenham.h  draw.h  event_handling.h  key_bindings.h  loops.h  matrix.h  parse.h  projections.h  put.h  putpoint.h  render.h  utils.h  visu.h  xiolin_wu.h
visu/srcs/: bresenham.c  clipping.c  draw_no_line.c  draw_utils.c  error_handling.c  event_handling.c  init_utils.c  initialize.c  loops.c  main.c  matrix.c  mouse_handling.c  parse.c  parse_connections.c  parse_destroy.c  parse_rooms.c  parse_traces.c  parse_utils.c  point.c  projections.c  put.c  putpoint.c  render.c  render_info.c  (+4 more)
(+3 files in other folders)
